<resources>
    <string name="app_name">Travel Earth</string>
    <string name="phrases">Country Phrases</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="translator">Translator</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="map">map</string>
    <string name="key_phrases">key phrases</string>
    <string name="pending">pending</string>
    <string name="setting">settings</string>
    <string name="Quiz">quiz</string>
    <string name="title_activity_maps">Top Tourist Attractions</string>
    <string name="change_map_style">Change Map Style</string>
    <string name="error_connection">Connection Error :(</string>
    <string name="loading_data">Loading…</string>
    <string name="flag">flag</string>
    <string name="name">Name: %1$s</string>
    <string name="capital">Official-Language: %1$s</string>
    <string name="translator_text">Welcome to Travel Earth Translator. You will be able to translate your text to whatever language you want to translate to. Press the button below to have some translation fun.</string>
    <string name="translate">translate</string>
    <string name="Start">Start</string>
    <string name="please_enter_your_text_here">Please enter your text here</string>
    <string name="translation_result">Translation result</string>
    <string name="translate_text">Translate</string>
    <string name="speech">Speech</string>
    <string-array name="planets_array">
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>German</item>
        <item>Punjabi</item>
        <item>Chinese</item>
        <item>Russian</item>
    </string-array>
    <string name="argentina_phrase_1">Donde está el baño</string>
    <string name="argentina_phrase_1_meaning">"Where's the restroom?"</string>
    <string name="argentina_phrase_2">No hablo castellano</string>
    <string name="argentina_phrase_2_meaning">"I don't speak Spanish"</string>
    <string name="argentina_phrase_3">Hablás inglés</string>
    <string name="argentina_phrase_3_meaning">Do you speak English ?</string>
    <string name="argentina_phrase_4">Salud</string>
    <string name="argentina_phrase_4_meaning">Cheers - bless you (when someone sneezes)</string>
    <string name="argentina_phrase_5">Cuanto sale</string>
    <string name="argentina_phrase_5_meaning">How much does it cost?</string>
    <string name="argentina_phrase_6">Donde está Sabi</string>
    <string name="argentina_phrase_6_meaning">Where is Sabi?</string>
    <string name="Australia_phrase_1">"No worries, mate, she'll be right"</string>
    <string name="Australia_phrase_1_meaning">"Reflects a national stoicism that suggests everything (she) will turn out fine in the end. This being the case, there's no real point in worrying about anything."</string>
    <string name="Australia_phrase_2">Hit the frog and toad</string>
    <string name="Australia_phrase_2_meaning">"Different to having a frog in your throat, which means having a sore throat. Hitting the frog and toad is when you hit the road. Get out of 'ere."</string>
    <string name="Australia_phrase_3">One for the road</string>
    <string name="Australia_phrase_3_meaning">"A last drink before going home. Said at bars or friend's houses before going home."</string>
    <string name="Australia_phrase_4">Cooee</string>
    <string name="Australia_phrase_4_meaning">"A loud, Aboriginal cry in the outback that tells people where you are, assuming they're within cooee range."</string>
    <string name="Australia_phrase_5">Have a go, you mug</string>
    <string name="Australia_phrase_5_meaning">Generally refers to anyone who isn\'t putting in a full effort or taking any risks.</string>
    <string name="Australia_phrase_6">Smoko, garbo, bowlo, bottlo, arvo</string>
    <string name="Australia_phrase_6_meaning">"An "o" is the suffix to any word it can shorten. If in doubt, throw an "o" on the end of the word and it's bound to be Australian. e.g. A break when you smoke is a "smoko." Someone who collects garbage is a "garbo." "</string>
    <string name="Australia_phrase_7">"Bushman's handkerchief"</string>
    <string name="Australia_phrase_7_meaning">Not really a handkerchief at all, but using your hands to delicately drain the snot from your nose.</string>
    <string name="Brazil_phrase_1">Bom dia (boa tarde)</string>
    <string name="Brazil_phrase_1_meaning">Good morning (good afternoon)</string>
    <string name="Brazil_phrase_2">Como vai você?</string>
    <string name="Brazil_phrase_2_meaning">How are you? </string>
    <string name="Brazil_phrase_3">Você fala inglês?</string>
    <string name="Brazil_phrase_3_meaning">Do you speak English?</string>
    <string name="Brazil_phrase_4">Tudo bem?</string>
    <string name="Brazil_phrase_4_meaning">A super-common informal greeting. “How’s it going?” (lit. “Everything good?”)</string>
    <string name="Brazil_phrase_5">O Brasil é lindo maravilhoso!</string>
    <string name="Brazil_phrase_5_meaning">Brazil is magnificent!</string>
    <string name="Brazil_phrase_6">Valeu</string>
    <string name="Brazil_phrase_6_meaning">Valeu is an informal way to say ‘thanks’ and would translate to ‘cheers’ in English.</string>
    <string name="Brazil_phrase_7">Tranquilo</string>
    <string name="Brazil_phrase_7_meaning">ranquilo literally translates into ‘tranquil’, but it usually is used to mean ‘it’s ok’ or ‘yeah, sure’.</string>
    <string name="Canada_phrase_1">Keener</string>
    <string name="Canada_phrase_1_meaning">A person who is extremely eager, zealous, or enthusiastic.</string>
    <string name="Canada_phrase_2">Klick</string>
    <string name="Canada_phrase_2_meaning">This term refers to kilometers, the unit of length in the metric system equal to 1,000m.</string>
    <string name="Canada_phrase_3">Two-four</string>
    <string name="Canada_phrase_3_meaning">This term is commonly used to refer to a case of 24 beers.</string>
    <string name="Canada_phrase_4">Eh?</string>
    <string name="Canada_phrase_4_meaning">Pronounced “ay.” This word is used in everyday Canadian vernacular to indicate that you don’t understand something, It’s similar to the phrases “huh,” “right?” and “what?”.</string>
    <string name="Canada_phrase_5">What you sayin’?</string>
    <string name="Canada_phrase_5_meaning">One of those Canadian sayings that can be misleading. It’s used when asking what someone is doing – similar to the phrase “What are you up to?”</string>
    <string name="Canada_phrase_6">Molson Muscle</string>
    <string name="Canada_phrase_6_meaning">Here’s another great Canadian phrase for you, the Molson Muscle. It’s what Canadians call a beer belly.</string>
    <string name="China_phrase_1">" 水满则溢。(Shuǐmǎn zé yì. 'water full but overflows') — Water flows in only to flow out. "</string>
    <string name="China_phrase_1_meaning">Similar to "what comes up must come down", this proverb points out that: things reverse when they reach their extremes. It\'s from the 18th century novel "A Dream of Red Mansions".</string>
    <string name="China_phrase_2"> 三个和尚没水喝。 (Sān gè héshàng méi shuǐ hē. - three monks have no water to drink — Too many cooks spoil the broth.</string>
    <string name="China_phrase_2_meaning">I.e. if too many people try to do something, like three monks trying to carry one bucket of water, they make a mess of it.</string>
    <string name="China_phrase_3">Nǐ hǎo ma? (Nee-haoww-mah?) 你好吗</string>
    <string name="China_phrase_3_meaning">How are you?</string>
    <string name="China_phrase_4">Xièxie. (sshyeah-sshyeah) 谢 谢</string>
    <string name="China_phrase_4_meaning">This is the basic and simple way to say thank you.</string>
    <string name="China_phrase_5"> Duōshao qián? 多少钱 (Dwor-sshaoww chyen?)</string>
    <string name="China_phrase_5_meaning">The phrase duōshao? is composed of the words duō (much) and shǎo (few), and means how much? or how many? Qián means money.</string>
    <string name="China_phrase_6">Wǒ xiǎng qù… (Wor sshyang chyoo …) 我想去 …</string>
    <string name="China_phrase_6_meaning">The three words are: wǒ (I), xiǎng (want), and qù (to go). Then add the name of the place. This is useful for buying train tickets, taking a taxi, etc.</string>
    <string name="France_phrase_1">Bienvenue.</string>
    <string name="France_phrase_1_meaning">Welcome</string>
    <string name="France_phrase_2">Madame/Monsieur/Mademoiselle</string>
    <string name="France_phrase_2_meaning">Mrs. /Mr. /Miss</string>
    <string name="France_phrase_3">Parlez-vous anglais?</string>
    <string name="France_phrase_3_meaning">Do you speak English?</string>
    <string name="France_phrase_4">Merci beaucoup </string>
    <string name="France_phrase_4_meaning">Thank you very much</string>
    <string name="France_phrase_5">Être dans la galère. - To be in the galley</string>
    <string name="France_phrase_5_meaning">To get yourself into a mess</string>
    <string name="France_phrase_6">Pisser dans un violon - To piss in a violin</string>
    <string name="France_phrase_6_meaning">To waste your efforts</string>
    <string name="Germany_phrase_1">“Das ist mir Wurst” - “This is sausage to me”</string>
    <string name="Germany_phrase_1_meaning">This expressions is used if you are indifferent or don’t care about something.</string>
    <string name="Germany_phrase_2">“Jemandem die Daumen drücken” - “To press your thumbs for someone”</string>
    <string name="Germany_phrase_2_meaning">In Germany they use this expression to wish someone good luck. It is often also accompanied with someone raising their fists and showing you that they are literally pressing their thumbs for you.</string>
    <string name="Germany_phrase_3">“Ich glaub mein Schwein pfeift” - “I think my pig whistles”</string>
    <string name="Germany_phrase_3_meaning">Germans use the phrase when they cannot believe something to be true or to express that they’re really surprised.</string>
    <string name="Germany_phrase_4">“Fix und fertig sein” -  “To be fixed and finished”</string>
    <string name="Germany_phrase_4_meaning">This phrase is commonly used to express that you are completely exhausted.</string>
    <string name="Germany_phrase_5">“Jemandem auf den Keks gehen” - “To go on someone’s cookie”</string>
    <string name="Germany_phrase_5_meaning">It is used to express that someone is getting on our nerves.</string>
    <string name="Germany_phrase_6">“Die Nase voll haben” - “To have the nose full”</string>
    <string name="Germany_phrase_6_meaning">This expression is just another, more creative, way of saying “enough is enough”. It’s often used when someone is fed up with a particular situation and no longer wants to talk about it.</string>
    <string name="India_phrase_1">Jugaad</string>
    <string name="India_phrase_1_meaning">The Oxford English Dictionary defines the word jugaad as “a flexible approach to problem-solving that uses limited resources in an innovative way”. </string>
    <string name="India_phrase_2">Ghanta</string>
    <string name="India_phrase_2_meaning">While the literal translation of ghanta is “bell”, it has become a common slang term in India. It expresses disbelief and is close in comparison to the phrase “yeah, right!”</string>
    <string name="India_phrase_3">Dhinchak</string>
    <string name="India_phrase_3_meaning">It’s similar in meaning to “bling”, but dhinchak applies to a lot of other things and isn’t limited to jewellery. A dhinchak person, for instance, is someone who tries to show a lot of swag.</string>
    <string name="India_phrase_4">Waat Lag Gayi</string>
    <string name="India_phrase_4_meaning">It means “ I am screwed!” or “We are screwed!” or “We are in the middle of a big screw-up”</string>
    <string name="India_phrase_5">Pandu</string>
</resources>